snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.jar.sha256
4cb83b1025594fca810784d26973634238a55c7323404f5a45ebac0220c4ad03